[Qt] All widgets are rendered incorrectly when rendered through a cache https://bugs.webkit.org/show_bug.cgi?id=47767

Reviewed by Simon Hausmann.

WebCore:

When a widget is not available to the RenderTheme, default
value are used for the state.

* platform/qt/RenderThemeQt.cpp:
(WebCore::initStyleOption):
(WebCore::RenderThemeQt::paintButton):
(WebCore::RenderThemeQt::paintTextField):
(WebCore::RenderThemeQt::paintMenuList):
(WebCore::RenderThemeQt::paintMenuListButton):
(WebCore::RenderThemeQt::paintProgressBar):
(WebCore::RenderThemeQt::paintSliderTrack):

WebKit/qt:

Add a new test for rendering with tiling.

* tests/qgraphicswebview/tst_qgraphicswebview.cpp:
(tst_QGraphicsWebView::widgetsRenderingThroughCache):

Canonical link: https://commits.webkit.org/60848@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70297 268f45cc-cd09-0410-ab3c-d52691b4dbfc